# global_illumination

./: CMakeLists.txt  README.md
configs/: config_all_diff.txt  config_spec_trans.txt
include/: accel_struct.hpp  brdf.hpp  camera.hpp  config.hpp  constant.hpp  film.hpp  geometry.hpp  integrator.hpp  interaction.hpp  light.hpp  objloader.hpp  ray.hpp  scene.hpp  utils.hpp
src/: accel_struct.cpp  brdf.cpp  camera.cpp  geometry.cpp  integrator.cpp  light.cpp  main.cpp  objloader.cpp  scene.cpp  utils.cpp
